# vizin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  backend.rs  cmdline.rs  command.rs  decompiler.rs  main.rs  pipe.rs  ts.rs  ui.rs  vim.rs
src/views/: completion.rs  decomp.rs  functions.rs  help.rs  hex.rs  listing.rs  mod.rs  panels.rs  xrefs.rs
