[package]
name = "vizin"
version = "0.1.0"
edition = "2021"
description = "vim-style TUI disassembler/decompiler powered by rizin + Ghidra's decompiler (rz-ghidra)"
license = "MIT"
readme = "README.md"
keywords = ["reverse-engineering", "disassembler", "decompiler", "tui", "vim"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
tree-sitter = "0.24"
tree-sitter-c = "0.23"

[profile.release]
lto = true
strip = true

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
must_use_candidate = "allow"
return_self_not_must_use = "deny"
inefficient_to_string = "deny"
redundant_clone = "deny"
match_same_arms = "deny"
if_same_then_else = "deny"
branches_sharing_code = "deny"
clone_on_copy = "deny"
implicit_clone = "deny"
large_types_passed_by_value = "deny"
too_many_arguments = "deny"
too_many_lines = "deny"
cognitive_complexity = "deny"
type_complexity = "deny"
float_cmp = "deny"
unnecessary_wraps = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
module_name_repetitions = "deny"
missing_const_for_fn = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "deny"
dbg_macro = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
unused_async = "deny"
useless_format = "deny"
semicolon_if_nothing_returned = "deny"
map_unwrap_or = "deny"
manual_assert = "deny"
manual_ok_or = "deny"
manual_string_new = "deny"
wildcard_dependencies = "deny"
get-first = "deny"
needless-borrow = "deny"
needless-pass-by-value = "deny"
match_like_matches_macro = "deny"
manual-let-else = "deny"
collapsible-if = "deny"
collapsible-match = "deny"
for-kv-map = "deny"
needless-return = "deny"
unnecessary-map-or = "deny"
format-in-format-args = "deny"
to-string-in-format-args = "deny"
redundant-field-names = "deny"
needless-update = "deny"
manual-range-contains = "deny"
manual-repeat-n = "deny"
useless-vec = "deny"
iter-cloned-collect = "deny"
map-entry = "deny"
